fix responsive on iphone 14 pro max

--- a/portfolio/src/app/about-me/about-me.component.scss
+++ b/portfolio/src/app/about-me/about-me.component.scss
@@ -86,6 +86,10 @@ section {
         z-index: -1;
         top: -14rem;
         width: 15rem;
+        @media (max-width: "700px") {
+            top: 6rem;
+            width: 12rem;
+        }
     }
 }
 
