--- a/portfolio/src/app/contact/contact.component.scss
+++ b/portfolio/src/app/contact/contact.component.scss
@@ -275,6 +275,7 @@ input::placeholder {
 
     @media (max-width: 650px) {
         right: 2rem;
+        left: 85%;
     }
 
     @media (max-width: 390px) {
