--- a/portfolio/src/app/skills/skills.component.scss
+++ b/portfolio/src/app/skills/skills.component.scss
@@ -53,6 +53,7 @@ section {
         padding: 0;
         padding-bottom: 5rem;
         padding-right: 3rem;
+        padding-left: 5rem;
     }
 
     @media (min-width: 741px) {
