--- a/portfolio/src/app/start-screen/start-screen.component.scss
+++ b/portfolio/src/app/start-screen/start-screen.component.scss
@@ -129,7 +129,7 @@ section {
     width: 29rem;
     margin: 0 0 0 7rem;
     @media (max-width: 600px) {
-        margin: -5rem 0rem 0rem 2rem;
+        margin: -5rem 0rem 0rem 3rem;
         height: 42rem;
     }
 }
@@ -161,7 +161,7 @@ section {
 
 .linkList {
     position: absolute;
-    bottom: 20rem;
+    bottom: 4rem;
     display: flex;
     align-items: center;
     gap: 1rem;
